Fix the toggle caps lock accelerator not always working.

There are four ways we can trigger this accelerator, out of which only the
first used to work:
1. Press Alt, Press Search, Release Search, Release Alt.
2. Press Search, Press Alt, Release Search, Release Alt.
3. Press Alt, Press Search, Release Alt, Release Search.
4. Press Search, Press Alt, Release Alt, Release Search.

BUG=686976
TEST=ash_unittests --gtest_filter=ToggleCapsLockTest.ToggleCapsLockAccelerators

Review-Url: https://codereview.chromium.org/2686833005
Cr-Commit-Position: refs/heads/master@{#449190}

Former-commit-id: b93cbcadc5af7f922dd3ae2e379d39e06e7c4f93