ash/common/accelerators/accelerator_table.cc
@@ -84,7 +84,14 @@ const AcceleratorData kAcceleratorData[] = {
     {false, ui::VKEY_LSHIFT, ui::EF_NONE, DISABLE_CAPS_LOCK},
     {false, ui::VKEY_SHIFT, ui::EF_NONE, DISABLE_CAPS_LOCK},
     {false, ui::VKEY_RSHIFT, ui::EF_NONE, DISABLE_CAPS_LOCK},
+    // Accelerators to toggle Caps Lock.
+    // The following is triggered when Search is released while Alt is still
+    // down. The key_code here is LWIN (for search) and Alt is a modifier.
     {false, ui::VKEY_LWIN, ui::EF_ALT_DOWN, TOGGLE_CAPS_LOCK},
+    // The following is triggered when Alt is released while search is still
+    // down. The key_code here is MENU (for Alt) and Search is a modifier
+    // (EF_COMMAND_DOWN is used for Search as a modifier).
+    {false, ui::VKEY_MENU, ui::EF_COMMAND_DOWN, TOGGLE_CAPS_LOCK},
     {true, ui::VKEY_VOLUME_MUTE, ui::EF_NONE, VOLUME_MUTE},
     {true, ui::VKEY_VOLUME_DOWN, ui::EF_NONE, VOLUME_DOWN},
     {true, ui::VKEY_VOLUME_UP, ui::EF_NONE, VOLUME_UP},
